WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108013
[Qt]Qt build fix
https://bugs.webkit.org/show_bug.cgi?id=108013
Summary
[Qt]Qt build fix
Adenilson Cavalcanti Silva
Reported
2013-01-26 14:02:50 PST
Around
r138883
changes on process initialization classes had a left over header file that broke building WebKit with Qt5. This patch fix it.
Attachments
Build fix
(1.50 KB, patch)
2013-01-26 14:06 PST
,
Adenilson Cavalcanti Silva
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adenilson Cavalcanti Silva
Comment 1
2013-01-26 14:06:23 PST
Created
attachment 184885
[details]
Build fix
WebKit Review Bot
Comment 2
2013-01-26 14:25:38 PST
Comment on
attachment 184885
[details]
Build fix Clearing flags on attachment: 184885 Committed
r140916
: <
http://trac.webkit.org/changeset/140916
>
WebKit Review Bot
Comment 3
2013-01-26 14:25:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug