[Qt]Qt build fix https://bugs.webkit.org/show_bug.cgi?id=108013

Changes on process initialization classes broke webkit building with Qt5. This
patch fix it.

Patch by Adenilson Cavalcanti <cavalcantii@gmail.com> on 2013-01-26
Reviewed by Sam Weinig.

* PluginProcess/qt/PluginProcessMainQt.cpp:

Canonical link: https://commits.webkit.org/126225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140916 268f45cc-cd09-0410-ab3c-d52691b4dbfc